Fix jumpy collapse animation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,11 @@
-.sidebar {
+.sidebar-container {
+  padding: 0;
   width: 270px;
   box-shadow: 2px 0 4px lightgray;
-  z-index: 1;
+  z-index: 10;
+}
+
+.sidebar {
+  display: block;
+  padding: 0 12px;
 }
