--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .logo {
   width: 270px - 2*12px;
   margin: 20px 0px;
-  padding: 0 20px;
+  padding: 0 30px;
 }
 
 .nav-pills {
